--- a/mobile/src/main/res/layout/fragment_home.xml
+++ b/mobile/src/main/res/layout/fragment_home.xml
@@ -23,6 +23,12 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Next Button" />
+
+        <Button
+            android:id="@+id/play_button"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Play Button" />
     </LinearLayout>
 
 </FrameLayout>
